2008-Aug-28  yselkowitz

	* lib/ruby.cygclass (RI_SITEDIR): Define.
	(ruby_compile, ruby_install) [RDOC_SOURCE]: Build ri docs, not HTML.

2008-Aug-27  yselkowitz

	* configure.in: Post-release version bump.

	* Tagged 0.4.0 release.

2008-Aug-26  yselkowitz

	* lib/gtk2-perl.cygclass (gtk2_perl_compile):
	Manpage workaround missed some pages; use managed mount instead.
	Inter-module linking fixed in perl 5.10.0-5 and EU::D 0.300-2.

2008-Aug-25  yselkowitz

	* lib/berkdb.cygclass: Java and Tcl bindings are optional, depending
	on whether their respective cygclasses have already been inherited.

2008-Aug-22  yselkowitz

	* bin/cygport.in (inherited): New function (backported from trunk).

	* bin/dolib: Use libtool to install libtool libraries.

	* bin/cygport.in: Only run on Cygwin 1.5.

	* bin/cygport.in (__prepinfo): Compress only *.info* files.

	* configure.in: Post-release version bump.

2008-Aug-19  yselkowitz

	* Branched 0.3.13 for cygwin-1.5.